# wasmtime-component

./: Cargo.toml  README.md
examples/: hello.rs
src/: lib.rs
wit/: host.wit
