[package]
name = "wasm-components"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.14.0" }

[dev-dependencies]
wasmtime = { version = "15.0.0", features = ["component-model"] }
wasmtime-wasi = "15.0.0"
